# Yb-pdf-Final

SARC_YB_LP-yash_backend/: db.sqlite3
SARC_YB_LP-yash_backend/response/: urls.py  views.py  yearbook_id_aryan.xlsx
SARC_YB_LP-yash_backend/response/data/: yearbook_id_aryan1.csv
SARC_YB_LP-yash_backend/templates/: dashboard.html  sdsnew.py  yearbook_id_aryan.csv
SARC_YB_LP-yash_backend/yash/: settings.py  urls.py
YB-pdf-backend-main/: db.sqlite3  manage.py  pyproject.toml
YB-pdf-backend-main/physicalYb/: asgi.py  settings.py  urls.py  wsgi.py
YB-pdf-backend-main/physicalYbImage/: apps.py  models.py  serializers.py  urls.py  views.py
YB-pdf-backend-main/physicalYbImage/migrations/: 0001_initial.py
YB-pdf-frontend-main/: package-lock.json  package.json
YB-pdf-frontend-main/src/: App.js  yb_test.csv
YB-pdf-frontend-main/src/Pages/: Element.css  PDFGenerator.jsx
YB-pdf-frontend-main/src/Pages/CSVdata/: Posts.csv
YB-pdf-frontend-main/src/Pages/styles/: PDFStyles.js  profileStyle.js  signingOffStyle.js
